--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -257,7 +257,15 @@
     "noActionsYet": "Ainda sem ações",
     "workerActionsDescription": "Ações e resultados do Worker aparecerão aqui conforme executam",
     "toolIsRunning": "Ferramenta está executando",
-    "toolCurrentlyExecuting": "{toolName} está executando no momento. Resultados aparecerão aqui quando completo."
+    "toolCurrentlyExecuting": "{toolName} está executando no momento. Resultados aparecerão aqui quando completo.",
+    "rateThisResult": "Avaliar este resultado",
+    "feedbackHelpsImprove": "Teu feedback nos ajuda a melhorar",
+    "additionalFeedbackOptional": "Feedback adicional (opcional)",
+    "helpKortixImprove": "Ajuda Kortix a melhorar com teu feedback",
+    "submit": "Enviar",
+    "submitting": "Enviando...",
+    "feedbackSubmittedSuccess": "Feedback enviado com sucesso",
+    "feedbackSubmitFailed": "Falha ao enviar feedback"
   },
   "agents": {
     "title": "Agentes",
