guest mode for mobile app

--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -94,6 +94,7 @@
     "confirmationEmailSent": "Confirmation link sent to",
     "openEmailAppBtn": "Open Email App",
     "openGmailBtn": "Open Gmail App",
+    "browseAsGuest": "Browse as Guest",
     "validationErrors": {
       "emailPasswordRequired": "Please enter both email and password",
       "passwordsNoMatch": "Passwords don't match",
