--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -248,7 +248,7 @@
     "customWorkers": "Custom Workers",
     "scheduledTriggers": "Scheduled Triggers",
     "appTriggers": "App Triggers",
-    "limitsExceeded": "You ran out of limits. Upgrade your plan to chat more.",
+    "limitsExceeded": "You've reached your chat limit ({current}/{limit}). Upgrade your plan to create more chats.",
     "agentInitiatedSuccessfully": "Agent initiated successfully",
     "aiAssistantReady": "Your AI assistant is ready to help"
   },
