--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -53,7 +53,29 @@
     "alreadyHaveAccount": "已有账号？",
     "dontHaveAccount": "还没账号？",
     "tapToContinue": "点击继续",
-    "guest": "访客",
+    "drawer": {
+      "defaultTitle": "Create an Account",
+      "defaultMessage": "Sign up or log in to continue",
+      "signInToChat": "Sign in to Chat",
+      "signInToChatMessage": "Create an account or log in to start chatting with AI workers.",
+      "signUpUnlock": "Create an Account",
+      "signUpUnlockMessage": "Sign up to unlock full access to AI workers and features.",
+      "welcomeBack": "Welcome Back",
+      "welcomeBackMessage": "Log in to continue using AI workers and features.",
+      "signUpToContinue": "Sign up to continue",
+      "signUpToContinueMessage": "Please sign up or sign in to create and select workers, connect apps and much more"
+    },
+    "guest": {
+      "label": "访客",
+      "title": "Browse Without\nan Account",
+      "description": "Try Kortix with limited features. No signup required!",
+      "continue": "Continue as Guest",
+      "signUp": "Sign Up Instead",
+      "agreement": "By continuing, you agree to our",
+      "terms": "Terms of Service",
+      "and": "and",
+      "privacy": "Privacy Policy"
+    },
     "signOutConfirm": "确定要退出吗？",
     "createFreeAccount": "创建免费账号",
     "createAccount": "创建账号",
