--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -53,7 +53,29 @@
     "alreadyHaveAccount": "¿Ya tienes cuenta?",
     "dontHaveAccount": "¿No tienes cuenta?",
     "tapToContinue": "Toca para continuar",
-    "guest": "Invitado",
+    "drawer": {
+      "defaultTitle": "Create an Account",
+      "defaultMessage": "Sign up or log in to continue",
+      "signInToChat": "Sign in to Chat",
+      "signInToChatMessage": "Create an account or log in to start chatting with AI workers.",
+      "signUpUnlock": "Create an Account",
+      "signUpUnlockMessage": "Sign up to unlock full access to AI workers and features.",
+      "welcomeBack": "Welcome Back",
+      "welcomeBackMessage": "Log in to continue using AI workers and features.",
+      "signUpToContinue": "Sign up to continue",
+      "signUpToContinueMessage": "Please sign up or sign in to create and select workers, connect apps and much more"
+    },
+    "guest": {
+      "label": "Invitado",
+      "title": "Browse Without\nan Account",
+      "description": "Try Kortix with limited features. No signup required!",
+      "continue": "Continue as Guest",
+      "signUp": "Sign Up Instead",
+      "agreement": "By continuing, you agree to our",
+      "terms": "Terms of Service",
+      "and": "and",
+      "privacy": "Privacy Policy"
+    },
     "signOutConfirm": "¿Seguro que quieres cerrar sesión?",
     "createFreeAccount": "Crear cuenta gratis",
     "createAccount": "Crear cuenta",
