--- a/apps/mobile/locales/pt.json
+++ b/apps/mobile/locales/pt.json
@@ -49,7 +49,29 @@
     "alreadyHaveAccount": "Já tem conta?",
     "dontHaveAccount": "Não tem conta?",
     "tapToContinue": "Toque para continuar",
-    "guest": "Visitante",
+    "drawer": {
+      "defaultTitle": "Create an Account",
+      "defaultMessage": "Sign up or log in to continue",
+      "signInToChat": "Sign in to Chat",
+      "signInToChatMessage": "Create an account or log in to start chatting with AI workers.",
+      "signUpUnlock": "Create an Account",
+      "signUpUnlockMessage": "Sign up to unlock full access to AI workers and features.",
+      "welcomeBack": "Welcome Back",
+      "welcomeBackMessage": "Log in to continue using AI workers and features.",
+      "signUpToContinue": "Sign up to continue",
+      "signUpToContinueMessage": "Please sign up or sign in to create and select workers, connect apps and much more"
+    },
+    "guest": {
+      "label": "Visitante",
+      "title": "Browse Without\nan Account",
+      "description": "Try Kortix with limited features. No signup required!",
+      "continue": "Continue as Guest",
+      "signUp": "Sign Up Instead",
+      "agreement": "By continuing, you agree to our",
+      "terms": "Terms of Service",
+      "and": "and",
+      "privacy": "Privacy Policy"
+    },
     "signOutConfirm": "Tem certeza que quer sair?",
     "createFreeAccount": "Criar conta grátis",
     "enterEmailPassword": "Digite email e senha",
