improve account deletion wip

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -76,6 +76,13 @@
         "billingRemoved": "All billing data will be removed",
         "scheduled30Days": "Your account will be scheduled for deletion in 30 days",
         "gracePeriod": "You can cancel this request anytime within the 30-day grace period. After 30 days, all your data will be permanently deleted and cannot be recovered.",
+        "chooseDeletionType": "Choose deletion type:",
+        "gracePeriodOption": "30-Day Grace Period",
+        "gracePeriodDescription": "Your account will be scheduled for deletion in 30 days. You can cancel this request anytime within the grace period.",
+        "immediateOption": "Immediate Deletion",
+        "immediateDescription": "Your account and all data will be permanently deleted immediately. This action cannot be undone.",
+        "warningImmediate": "This action cannot be undone",
+        "warningGracePeriod": "This action cannot be undone after 30 days",
         "confirmText": "Type delete to confirm",
         "confirmPlaceholder": "delete",
         "keepAccount": "Keep Account",
