--- a/frontend/translations/es.json
+++ b/frontend/translations/es.json
@@ -295,6 +295,7 @@
     "credits": "Créditos",
     "popular": "Popular",
     "creditsExplained": "Créditos explicados",
+    "creditsExhaustedRefreshIn": "Has agotado tus créditos. Se renovarán en {time}",
     "trialActive": "Prueba Activa",
     "trialBadge": "Prueba de 7 Días",
     "currentPlan": "Plan Actual",
