--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -295,6 +295,7 @@
     "credits": "クレジット",
     "popular": "人気",
     "creditsExplained": "クレジットの説明",
+    "creditsExhaustedRefreshIn": "クレジットを使い果たしました。{time}後に更新されます",
     "trialActive": "トライアル有効",
     "trialBadge": "7日間トライアル",
     "currentPlan": "現在のプラン",
