--- a/frontend/translations/ja.json
+++ b/frontend/translations/ja.json
@@ -29,7 +29,7 @@
     "next": "次へ",
     "upgrade": "アップグレード",
     "basic": "ベーシック",
-    "tryFree": "無料で始める"
+    "tryFree": "始める"
   },
   "settings": {
     "title": "設定",
@@ -282,6 +282,85 @@
   },
   "home": {
     "heroPlaceholder": "Workerに完了させたいタスクを説明..."
+  },
+  "showcase": {
+    "title": "Kortix: あなたの自律型AIワーカー",
+    "subtitle": "複雑なタスクのために構築され、すべてのために設計されました。シンプルなリクエストからメガ複雑なプロジェクトまで、すべてを処理する究極のAIアシスタント。",
+    "tryItOut": "試してみる",
+    "kortixComputer": "Kortix Computer",
+    "running": "実行中",
+    "workers": {
+      "images": {
+        "title": "画像",
+        "description": "オンデマンドで画像を作成。製品写真からソーシャルグラフィック、完全なイラストまで。スタイル、照明、色、レイアウトを調整したり、既存のビジュアルを迅速な編集とタッチアップで洗練させます。",
+        "capabilities": {
+          "0": "製品写真を生成",
+          "1": "ソーシャルグラフィックを作成",
+          "2": "イラストを作成",
+          "3": "スタイルと照明のバリエーション",
+          "4": "ロゴ/アセット作成",
+          "5": "+ その他多数"
+        },
+        "imageAlt": "成長は線形ではないグラフィック例",
+        "fileType": "image"
+      },
+      "slides": {
+        "title": "スライド",
+        "description": "即座に素晴らしいプレゼンテーションを作成。ピッチデッキからレポート、トレーニング資料まで。テーマ、レイアウト、コンテンツ構造を調整したり、既存のデッキを迅速な編集と更新で洗練させます。",
+        "capabilities": {
+          "0": "ピッチデッキ",
+          "1": "トレーニング資料",
+          "2": "レポートプレゼンテーション",
+          "3": "テーマとレイアウトのバリエーション",
+          "4": "コンテンツの再構築",
+          "5": "+ その他多数"
+        },
+        "imageAlt": "Nexus Enterprise Automation Platformスライド例",
+        "fileType": "PPTX"
+      },
+      "data": {
+        "title": "データ",
+        "description": "生データをインサイトに変換。スプレッドシートからダッシュボード、ビジュアライゼーションまで。データセットをクリーンアップし、チャートを作成し、レポートを構築したり、既存の分析を迅速な更新で洗練させます。",
+        "capabilities": {
+          "0": "ダッシュボード",
+          "1": "ビジュアライゼーション",
+          "2": "データレポート",
+          "3": "データのクリーンアップと整理",
+          "4": "インサイトを生成",
+          "5": "+ その他多数"
+        },
+        "imageAlt": "財務モデルダッシュボード例",
+        "fileType": "プレビュー"
+      },
+      "docs": {
+        "title": "ドキュメント",
+        "description": "ドキュメントを簡単に作成・編集。提案からガイド、コンテンツまで。トーン、構造、フォーマットを調整したり、既存のドキュメントを迅速な書き直しと磨きで洗練させます。",
+        "capabilities": {
+          "0": "提案",
+          "1": "ガイドとマニュアル",
+          "2": "コンテンツ",
+          "3": "トーンとスタイルのバリエーション",
+          "4": "フォーマットと再構築",
+          "5": "+ その他多数"
+        },
+        "imageAlt": "2025年第3四半期エグゼクティブサマリーレポート例",
+        "fileType": "PDF"
+      },
+      "research": {
+        "title": "リサーチ",
+        "description": "トピックを包括的に調査。市場トレンドから競合分析、深い調査まで。ソースを収集し、調査結果を統合したり、既存のリサーチを迅速な更新で洗練させます。",
+        "capabilities": {
+          "0": "市場トレンドを分析",
+          "1": "競合リサーチ",
+          "2": "トピックの深い調査",
+          "3": "ソースを収集",
+          "4": "調査結果を統合",
+          "5": "+ その他多数"
+        },
+        "imageAlt": "詳細な競合プロフィールリサーチ例",
+        "fileType": "PDF"
+      }
+    }
   },
   "threads": {
     "title": "スレッド",
