--- a/frontend/translations/zh.json
+++ b/frontend/translations/zh.json
@@ -29,7 +29,7 @@
     "next": "下一步",
     "upgrade": "升级",
     "basic": "基础版",
-    "tryFree": "免费开始"
+    "tryFree": "开始"
   },
   "settings": {
     "title": "设置",
@@ -282,6 +282,85 @@
   },
   "home": {
     "heroPlaceholder": "描述你想让你的 Worker 完成的任务..."
+  },
+  "showcase": {
+    "title": "Kortix：您的自主AI工作器",
+    "subtitle": "为复杂任务而构建，为一切而设计。终极AI助手，处理一切——从简单请求到超级复杂的项目。",
+    "tryItOut": "试试看",
+    "kortixComputer": "Kortix Computer",
+    "running": "运行中",
+    "workers": {
+      "images": {
+        "title": "图像",
+        "description": "按需创建图像。从产品照片到社交媒体图形再到完整插图。调整风格、照明、颜色和布局，或通过快速编辑和修饰来完善现有视觉效果。",
+        "capabilities": {
+          "0": "生成产品照片",
+          "1": "创建社交媒体图形",
+          "2": "制作插图",
+          "3": "风格和照明变化",
+          "4": "徽标/资产创建",
+          "5": "+ 更多"
+        },
+        "imageAlt": "增长不是线性的图形示例",
+        "fileType": "image"
+      },
+      "slides": {
+        "title": "幻灯片",
+        "description": "即时创建令人惊叹的演示文稿。从推介演示到报告再到培训材料。调整主题、布局、内容结构，或通过快速编辑和更新来完善现有演示文稿。",
+        "capabilities": {
+          "0": "推介演示",
+          "1": "培训材料",
+          "2": "报告演示",
+          "3": "主题和布局变化",
+          "4": "内容重组",
+          "5": "+ 更多"
+        },
+        "imageAlt": "Nexus企业自动化平台幻灯片示例",
+        "fileType": "PPTX"
+      },
+      "data": {
+        "title": "数据",
+        "description": "将原始数据转化为洞察。从电子表格到仪表板再到可视化。清理数据集、创建图表、构建报告，或通过快速更新来完善现有分析。",
+        "capabilities": {
+          "0": "仪表板",
+          "1": "可视化",
+          "2": "数据报告",
+          "3": "清理和组织数据",
+          "4": "生成洞察",
+          "5": "+ 更多"
+        },
+        "imageAlt": "财务模型仪表板示例",
+        "fileType": "预览"
+      },
+      "docs": {
+        "title": "文档",
+        "description": "轻松编写和编辑文档。从提案到指南再到内容片段。调整语气、结构、格式，或通过快速重写和润色来完善现有文档。",
+        "capabilities": {
+          "0": "提案",
+          "1": "指南和手册",
+          "2": "内容片段",
+          "3": "语气和风格变化",
+          "4": "格式化和重组",
+          "5": "+ 更多"
+        },
+        "imageAlt": "2025年第三季度执行摘要报告示例",
+        "fileType": "PDF"
+      },
+      "research": {
+        "title": "研究",
+        "description": "全面研究主题。从市场趋势到竞争分析再到深入研究。收集来源、综合发现，或通过快速更新来完善现有研究。",
+        "capabilities": {
+          "0": "分析市场趋势",
+          "1": "竞争研究",
+          "2": "深入主题研究",
+          "3": "收集来源",
+          "4": "综合发现",
+          "5": "+ 更多"
+        },
+        "imageAlt": "详细竞争对手档案研究示例",
+        "fileType": "PDF"
+      }
+    }
   },
   "threads": {
     "title": "线程",
