--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -40,6 +40,12 @@
     "resetLinkSent": "Wir haben dir einen Link geschickt an",
     "didntReceiveEmail": "Keine E-Mail bekommen? Hier tippen zum erneut senden",
     "backToSignIn": "Zurück zum Login",
+    "magicLinkSent": "Wir haben dir einen Magic Link geschickt. Klicke darauf in deiner E-Mail, um dich anzumelden.",
+    "magicLinkDescription": "Gib deine E-Mail ein und wir schicken dir einen Magic Link zum Anmelden",
+    "sendMagicLink": "Magic Link senden",
+    "resendLink": "Link erneut senden",
+    "magicLinkFailed": "Magic Link konnte nicht gesendet werden",
+    "termsRequired": "Bitte akzeptiere die Nutzungsbedingungen",
     "continueWith": "Weiter mit",
     "continueWithApple": "Mit Apple fortfahren",
     "continueWithGoogle": "Mit Google fortfahren",
