--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -40,6 +40,12 @@
     "resetLinkSent": "Te enviamos un link a",
     "didntReceiveEmail": "¿No recibiste el email? Toca para reenviar",
     "backToSignIn": "Volver al login",
+    "magicLinkSent": "Te enviamos un magic link. Haz clic en él en tu email para iniciar sesión.",
+    "magicLinkDescription": "Ingresa tu email y te enviaremos un magic link para iniciar sesión",
+    "sendMagicLink": "Enviar magic link",
+    "resendLink": "Reenviar link",
+    "magicLinkFailed": "Error al enviar magic link",
+    "termsRequired": "Por favor acepta los términos y condiciones",
     "continueWith": "Continuar con",
     "continueWithApple": "Continuar con Apple",
     "continueWithGoogle": "Continuar con Google",
