--- a/apps/mobile/locales/fr.json
+++ b/apps/mobile/locales/fr.json
@@ -40,6 +40,12 @@
     "resetLinkSent": "On t'a envoyé un lien à",
     "didntReceiveEmail": "Pas reçu l'email? Appuie pour renvoyer",
     "backToSignIn": "Retour au login",
+    "magicLinkSent": "On t'a envoyé un magic link. Clique dessus dans ton email pour te connecter.",
+    "magicLinkDescription": "Entre ton email et on t'enverra un magic link pour te connecter",
+    "sendMagicLink": "Envoyer magic link",
+    "resendLink": "Renvoyer le lien",
+    "magicLinkFailed": "Échec de l'envoi du magic link",
+    "termsRequired": "Veuillez accepter les termes et conditions",
     "continueWith": "Continuer avec",
     "continueWithApple": "Continuer avec Apple",
     "continueWithGoogle": "Continuer avec Google",
