--- a/apps/mobile/locales/it.json
+++ b/apps/mobile/locales/it.json
@@ -37,6 +37,12 @@
     "resetLinkSent": "Ti abbiamo inviato un link a",
     "didntReceiveEmail": "Non hai ricevuto l'email? Tocca per rinviare",
     "backToSignIn": "Torna al login",
+    "magicLinkSent": "Ti abbiamo inviato un magic link. Cliccalo nella tua email per accedere.",
+    "magicLinkDescription": "Inserisci la tua email e ti invieremo un magic link per accedere",
+    "sendMagicLink": "Invia magic link",
+    "resendLink": "Rinvia link",
+    "magicLinkFailed": "Invio magic link fallito",
+    "termsRequired": "Si prega di accettare i termini e le condizioni",
     "continueWith": "Continua con",
     "continueWithApple": "Continua con Apple",
     "continueWithGoogle": "Continua con Google",
