--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -37,6 +37,12 @@
     "resetLinkSent": "リセットリンクを送信しました",
     "didntReceiveEmail": "メールが届かない？タップして再送信",
     "backToSignIn": "ログインに戻る",
+    "magicLinkSent": "マジックリンクを送信しました。メール内のリンクをクリックしてログインしてください。",
+    "magicLinkDescription": "メールアドレスを入力すると、ログイン用のマジックリンクを送信します",
+    "sendMagicLink": "マジックリンクを送信",
+    "resendLink": "リンクを再送信",
+    "magicLinkFailed": "マジックリンクの送信に失敗しました",
+    "termsRequired": "利用規約に同意してください",
     "continueWith": "続ける",
     "continueWithApple": "Appleで続ける",
     "continueWithGoogle": "Googleで続ける",
