--- a/apps/mobile/locales/pt.json
+++ b/apps/mobile/locales/pt.json
@@ -37,6 +37,12 @@
     "resetLinkSent": "Enviamos um link para",
     "didntReceiveEmail": "Não recebeu o email? Toque para reenviar",
     "backToSignIn": "Voltar ao login",
+    "magicLinkSent": "Enviamos um magic link. Clica nele no teu email para entrar.",
+    "magicLinkDescription": "Digite teu email e vamos te enviar um magic link para entrar",
+    "sendMagicLink": "Enviar magic link",
+    "resendLink": "Reenviar link",
+    "magicLinkFailed": "Falha ao enviar magic link",
+    "termsRequired": "Por favor aceite os termos e condições",
     "continueWith": "Continuar com",
     "continueWithApple": "Continuar com Apple",
     "continueWithGoogle": "Continuar com Google",
