--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -40,6 +40,12 @@
     "resetLinkSent": "我们已将重置链接发送到",
     "didntReceiveEmail": "没收到邮件？点击重新发送",
     "backToSignIn": "返回登录",
+    "magicLinkSent": "我们已发送一个魔法链接。点击邮件中的链接即可登录。",
+    "magicLinkDescription": "输入你的邮箱，我们会发送一个魔法链接供你登录",
+    "sendMagicLink": "发送魔法链接",
+    "resendLink": "重新发送链接",
+    "magicLinkFailed": "发送魔法链接失败",
+    "termsRequired": "请接受条款和条件",
     "continueWith": "继续",
     "continueWithApple": "使用 Apple 继续",
     "continueWithGoogle": "使用 Google 继续",
