--- a/apps/mobile/locales/en.json
+++ b/apps/mobile/locales/en.json
@@ -44,6 +44,12 @@
     "resetLinkSent": "We sent a reset link to",
     "didntReceiveEmail": "Didn't get the email? Tap to resend",
     "backToSignIn": "Back to sign in",
+    "magicLinkSent": "We sent you a magic link. Click it in your email to sign in.",
+    "magicLinkDescription": "Enter your email and we'll send you a magic link to sign in",
+    "sendMagicLink": "Send magic link",
+    "resendLink": "Resend link",
+    "magicLinkFailed": "Failed to send magic link",
+    "termsRequired": "Please accept the terms and conditions",
     "continueWith": "Continue with",
     "continueWithApple": "Continue with Apple",
     "continueWithGoogle": "Continue with Google",
